# SpotifyMuter

./: .gitignore  CMakeLists.txt  README.md  install.sh  spotify-muter.cpp  uninstall.sh
.github/workflows/: release.yml
